        value in the stored file is greater than 99 (Etsushi)

  o Minor
    - update configure script (Etsushi)
      - don't require XML::Parser
      - more strict check for canna
    - Qt immodule
      - fix to respond to uim-pref-gtk's custom messages on the fly in
	addition to uim-pref-qt's (Etsushi)
    - uim-pref-qt
      - code cleanup (Kazuki)

  o Others
    - Update translations

Overview of changes from 0.4.9.1 to 1.0.0-alpha
==
* New features
  o Main features
    - uim.el (bridge for Emacs) (Konosuke)
    - byeoru Hangul input suite (Jae-hyeon)
    - mana Japanese input (Masanari)

  o IM related
    - toggle-im facility (Etsushi, YamaKen)
    - Anthy
      - vi-cooperative mode (Masanari)
    - Canna
      - vi-cooperative mode (Masanari)
    - SKK (Etsushi)
      - dynamic completion
      - ddskk compatible behavior with mistypes while starting
	kanji-mode, e.g. "kAnnji" for "Kannji"
      - improved numeric conversion
      - support commit with opposite case in latin-conversion
      - support completion with conversion and/or commit at once

* Fixes
  o Critical
    - fix segmentation fault if uim is compiled with '--enabled-debug'
      (Etsushi, dai <d+r AT vdr.jp>)
    - fix IPC (connection to PRIME) in some rare cases (Masanari)
    - fix possible GC crash with anti-stack smashing compilers such as
      GCC4 (Jun, YamaKen)

  o Minor
    - preedit reset with IM switch (Masanari)
    - some build fixes (Masanari)
  
    - gtk+ immodule
      - disable warnings (Etsushi)
    - uim-xim
      - support changes in X modifier keys on-the-fly (Etsushi)

    - Anthy
      - improve kana-input mode (Masanari)
    - SKK
      - improve completion behavior (Etsushi)
      - improve skkserv connection (Masahito, Etsushi)
    - PRIME
      - proper custom setting (YamaKen)

    - uim-im-switcher-qt
      - show list of IM properly (Etsushi)
    - uim-pref-qt
      - compatible behavior with uim-pref-gtk (Etsushi)

* Others
  o obsolete table API